# 1fpga-firmware

./: .dockerignore  .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
docker/armv7/: config.toml  de10nano.Dockerfile
docs/catalogs/: catalog.md
js/1fpga/react-osd/: package.json  tsconfig.json
js/1fpga/react-osd/src/: index.ts
js/1fpga/schemas/: package.json  tsconfig.json
js/1fpga/schemas/src/: catalog.ts  index.ts  settings.ts  utils.ts
js/1fpga/schemas/src/__tests__/: catalog.spec.ts
js/1fpga/types/: package.json
js/1fpga/types/1fpga/: commands.d.ts  core.d.ts  db.d.ts  dom.d.ts  fs.d.ts  net.d.ts  osd.d.ts  patrons.d.ts  schema.d.ts  settings.d.ts  system.d.ts  upgrade.d.ts  utils.d.ts  video.d.ts
js/frontend/: .prettierignore  jest.config.ts  package.json  rollup.config.js  tsconfig.json
js/frontend-react/: next.config.ts  package-lock.json  package.json  tsconfig.json
js/frontend-react/src/app/: application-layout.tsx  globals.css  layout.tsx  page.tsx
js/frontend-react/src/components/: PropertyList.tsx
js/frontend-react/src/components/osd/: OsdAlert.tsx  OsdFileSelect.tsx  OsdPrompt.tsx  OsdTextMenu.tsx  index.ts
js/frontend-react/src/components/ui-kit/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  dropdown.tsx  input.tsx  link.tsx  listbox.tsx  navbar.tsx  pagination.tsx  radio.tsx  select.tsx  sidebar-layout.tsx  sidebar.tsx  stacked-layout.tsx  switch.tsx  table.tsx  text.tsx  toggle.tsx
js/frontend-react/src/hooks/: index.ts  useOneFpga.ts  useOnline.ts  useView.ts
js/frontend-react/src/hooks/handlers/: index.ts  osd.tsx
js/frontend-react/src/polyfills/: globals.ts
js/frontend-react/src/polyfills/1fpga/: commands.ts  core.ts  db.ts  fs.ts  net.ts  osd.ts  osd.tsx  schema.ts  settings.ts  system.ts  upgrade.ts  video.ts
js/frontend-react/src/utils/client/: index.ts  react.ts  store.ts
js/frontend-react/src/workers/: OneFpga.ts
js/frontend/migrations/: README.md
js/frontend/rollup/: rollup-plugin-codegen.js  rollup-plugin-consts.js  rollup-plugin-db-migrations.js  rollup-plugin-template-literals.js
js/frontend/src/: jsx.d.ts  main.ts
js/frontend/src/actions/: start_game.ts
js/frontend/src/commands/: audio.ts  basic.ts  games.ts  index.ts
js/frontend/src/components/: test.tsx
js/frontend/src/services/: core.ts  index.ts  launch.ts  user.ts  utils.ts  video.ts
js/frontend/src/ui/: about.ts  cores.ts  downloads.ts  games.ts  index.ts  login.ts  main.ts  progress.ts  screenshots.ts  settings.ts
js/frontend/src/utils/: fetch_db.ts  fetch_json.ts  index.ts  osd.ts  sql.ts  versions.spec.ts  versions.ts
js/frontend/types/: consts.d.ts  globals.d.ts  migrations.d.ts
js/ui-menu/: package.json  rollup.config.js  tsconfig.json
js/ui-menu/src/: main.ts  polyfills.ts  renderer.ts
js/ui-menu/src/components/: App.tsx  Background.tsx  Menu.tsx
js/ui-menu/types/: dom.d.ts  jsx.d.ts
scripts/patreon/: index.js  patrons.json
src/bk2-format/: Cargo.toml
src/cyclone-v/: Cargo.toml
src/cyclone-v/src/: lib.rs  memory.rs
src/de10-nano/: Cargo.toml
src/fce-movie-format/: Cargo.toml
src/fce-movie-format/src/: lib.rs
src/firmware/: Cargo.toml
src/firmware-gui/: Cargo.toml
src/firmware-gui/src/: events.rs  lib.rs
src/firmware-script/: Cargo.toml  build.rs
src/firmware-script/src/: commands.rs  console.rs  job_executor.rs  lib.rs  module_loader.rs
src/firmware-script/src/modules/: one_fpga.rs
src/firmware-script/src/modules/one_fpga/: commands.rs  controllers.rs  core.rs  db.rs  dom.rs  fs.rs  gui.rs  net.rs  osd.rs  schema.rs  settings.rs  system.rs  upgrade.rs  utils.rs  video.rs
src/firmware-script/src/modules/one_fpga/dom/: node.rs  render.rs  style.rs
src/firmware-script/src/modules/one_fpga/globals/: core.rs  db.rs  image.rs  schema.rs
src/firmware-script/src/modules/one_fpga/osd/: filesystem.rs
src/firmware-ui/: Cargo.toml
src/firmware-ui/src/: application.rs  lib.rs  osd.rs
src/firmware-ui/src/application/: menu.rs
src/firmware-ui/src/application/menu/: filesystem.rs  item.rs  options.rs
src/firmware-ui/src/application/panels/: alert.rs  core_loop.rs  input_tester.rs  password.rs  progress.rs  prompt.rs  qrcode.rs  shortcut.rs
src/firmware-ui/src/application/widgets/: button.rs  controller.rs  text.rs
src/firmware-ui/src/data/: paths.rs
src/firmware-ui/src/input/: password.rs
src/firmware-ui/src/macguiver/: buffer.rs
src/firmware-ui/src/macguiver/platform/: sdl.rs
src/firmware-ui/src/macguiver/platform/sdl/window/: sdl_window.rs
src/firmware-ui/src/platform/: de10.rs
src/firmware/assets/: header.txt
src/firmware/src/: main.rs
src/frontend/src/: main.ts
src/frontend/src/commands/: basic.ts
src/frontend/src/ui/: screenshots.ts
src/frontend/types/1fpga/: core.d.ts  fs.d.ts  osd.d.ts
src/games-db-converter/: Cargo.toml
src/games-db-converter/src/: main.rs
src/mister-fpga/: Cargo.toml
src/mister-fpga-ini/: Cargo.toml
src/mister-fpga-ini/src/: bootcore.rs  ini.rs  lib.rs  video.rs
src/mister-fpga-ini/src/video/: aspect.rs  resolution.rs
src/mister-fpga/src/: config.rs  config_string.rs  fpga.rs  lib.rs  types.rs
src/mister-fpga/src/config/: ini.rs
src/mister-fpga/src/config/video/: edid.rs
src/mister-fpga/src/config_string/: parser.rs
src/mister-fpga/src/core/: buttons.rs  file.rs  menu.rs  mister_fpga.rs  video.rs
src/mister-fpga/src/core/video/: edid.rs  linux.rs
src/mister-fpga/src/core/video/linux/: video_mode.rs
src/mister-fpga/src/fpga/: spi.rs
src/mister-fpga/src/fpga/spi/: file_io.rs  osd_io.rs  user_io.rs
src/mister-fpga/tests/assets/config/: example_04_multi_section.ini
src/one-fpga/src/inputs/: gamepad.rs  keyboard.rs
src/taser/: Cargo.toml
src/taser/src/: main.rs
src/ui-fb/: Cargo.toml
src/ui-fb/src/: animation.rs  dom.rs  framebuffer.rs  image_cache.rs  layout.rs  lib.rs  render.rs  text.rs  tree.rs
src/video-test/: Cargo.toml
src/video-test/src/: main.rs
(+78 files in other folders)
