[workspace]
resolver = "2"
members = [
    "src/cyclone-v",
    "src/de10-nano",
    "src/fce-movie-format",
    "src/firmware",
    "src/firmware-script",
    "src/firmware-ui",
    "src/games-db-converter",
    "src/one-fpga",
    "src/mister-fpga",
    "src/mister-fpga-ini",
    "src/taser",
]

[profile.release]
lto = true
overflow-checks = false
panic = "abort"
strip = true
debug = false

[profile.dev]

[profile.release-debug]
opt-level = 3
debug = 0
inherits = "dev"
overflow-checks = false
panic = "abort"

[workspace.metadata.cross]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update",
    # TODO: figure out how to install clang and use it.
    #    "apt-get install --assume-yes clang:$CROSS_DEB_ARCH clang-10:$CROSS_DEB_ARCH lld:$CROSS_DEB_ARCH",
    "apt-get install --assume-yes fbi",
    "apt-get install --assume-yes linux-tools-common:$CROSS_DEB_ARCH linux-tools-generic:$CROSS_DEB_ARCH",
    "apt-get install --assume-yes libdbus-1-dev:$CROSS_DEB_ARCH",
    "apt-get install --assume-yes libusb-dev:$CROSS_DEB_ARCH",
    "apt-get install --assume-yes libevdev-dev:$CROSS_DEB_ARCH",
    "apt-get install --assume-yes libudev-dev:$CROSS_DEB_ARCH",
]

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.dependencies]
image = "0.25"
ouroboros = "0.18"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
time = { version = "0.3", features = ["local-offset"] }
url = { version = "2.5" }

# Repo crates
cyclone-v = { path = "src/cyclone-v" }
de10-nano = { path = "src/de10-nano" }
fce-movie-format = { path = "src/fce-movie-format" }
firmware = { path = "src/firmware" }
firmware-ui = { path = "src/firmware-ui" }
firmware-script = { path = "src/firmware-script" }
one-fpga = { path = "src/one-fpga", version = "0.1.0" }
mister-fpga = { path = "src/mister-fpga" }
mister-fpga-ini = { path = "src/mister-fpga-ini" }
taser = { path = "src/taser" }

[workspace.dependencies.sdl3]
version = "0.14.2"
features = ["static-link", "build-from-source-static", "build-from-source-unix-console"]

