[package]
name = "firmware-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
calloop = "0.14.2"
embedded-graphics.workspace = true
embedded-graphics-framebuf.workspace = true
embedded-layout.workspace = true
embedded-menu.workspace = true
embedded-text.workspace = true
libc.workspace = true
linuxfb = "0.3.1"
memmap = "0.7.0"
tracing.workspace = true

one-fpga.workspace = true

[lints]
workspace = true
