[package]
name = "firmware-script"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
linuxfb.workspace = true
one-fpga.workspace = true
ouroboros.workspace = true
reqwest.workspace = true
time.workspace = true
strum.workspace = true
tracing.workspace = true

boa_engine = { git = "https://github.com/boa-dev/boa.git", rev = "33050a73ace57900828ceb831ac52ca2d3ed0cd3", features = ["either"] }
boa_gc = { git = "https://github.com/boa-dev/boa.git", rev = "33050a73ace57900828ceb831ac52ca2d3ed0cd3" }
boa_interop = { git = "https://github.com/boa-dev/boa.git", rev = "33050a73ace57900828ceb831ac52ca2d3ed0cd3" }
boa_macros = { git = "https://github.com/boa-dev/boa.git", rev = "33050a73ace57900828ceb831ac52ca2d3ed0cd3" }
boa_runtime = { git = "https://github.com/boa-dev/boa.git", rev = "33050a73ace57900828ceb831ac52ca2d3ed0cd3" }

directories = "5.0.1"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
either = "1"
enum-map = { version = "3.0.0-beta.2", features = ["derive"] }
firmware-gui.workspace = true
firmware-ui.workspace = true
ips = "0.1.0"
liboptic_edid = "0.1.0"
mister-fpga.workspace = true
mister-fpga-ini.workspace = true
nix = { version = "0.29.0", features = ["ioctl", "net", "term"] }
ping = "0.5.2"
regex = "1.10.4"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
serde.workspace = true
serde_json = "1.0.115"
sha2 = { version = "0.11.0-pre.4" }
tempdir = "0.3.7"
walkdir = "2.5.0"

[features]
platform_de10 = ["firmware-ui/platform_de10"]
