[package]
name = "firmware-script"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
linuxfb.workspace = true
one-fpga.workspace = true
ouroboros.workspace = true
reqwest.workspace = true
time.workspace = true
strum.workspace = true
tracing.workspace = true

boa_engine = { git = "https://github.com/boa-dev/boa.git", rev = "8c057dc14af5696aff9065035951f5989ae68460", features = ["either"] }
boa_gc = { git = "https://github.com/boa-dev/boa.git", rev = "8c057dc14af5696aff9065035951f5989ae68460" }
boa_interop = { git = "https://github.com/boa-dev/boa.git", rev = "8c057dc14af5696aff9065035951f5989ae68460" }
boa_macros = { git = "https://github.com/boa-dev/boa.git", rev = "8c057dc14af5696aff9065035951f5989ae68460" }
boa_runtime = { git = "https://github.com/boa-dev/boa.git", rev = "8c057dc14af5696aff9065035951f5989ae68460", features = ["all"] }

directories = "6.0.0"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
either = "1"
enum-map = { version = "3.0.0-beta.2", features = ["derive"] }
firmware-gui.workspace = true
firmware-ui.workspace = true
ips = "0.1.0"
liboptic_edid = "0.1.0"
mister-fpga.workspace = true
mister-fpga-ini.workspace = true
nix = { version = "0.30.1", features = ["ioctl", "net", "term"] }
ping = "0.6.1"
regex = "1.10.4"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
serde.workspace = true
serde_json = "1.0.115"
sha2 = { version = "0.11.0-pre.4" }
tempdir = "0.3.7"
walkdir = "2.5.0"

[features]
platform_de10 = ["firmware-ui/platform_de10"]
