[package]
name = "firmware-ui"
version = "0.0.1"
edition = "2024"

[dependencies]
image.workspace = true
one-fpga.workspace = true
ouroboros.workspace = true
sdl3.workspace = true
strum.workspace = true
time.workspace = true
url.workspace = true

bitvec = "1.0.1"
byteorder = "1.4.3"
calloop = { version = "0.14.2", features = ["signals"] }
cfg-if = "1.0.0"
chrono = "0.4.26"
de10-nano = { path = "../de10-nano", optional = true }
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-menu = "0.6.1"
embedded-text = "0.6.6"
humansize = "2.1.3"
itertools = "0.12.0"
libc = { version = "0.2.150" }
mister-fpga = { path = "../mister-fpga", version = "0.1" }
network-interface = "1.0.1"
num-traits = "0.2.15"
qrcode = { version = "0.14.0", features = ["image"] }
regex = "1.9.3"
serde.workspace = true
tempdir = "0.3.7"
tinybmp = "0.5.0"
tracing.workspace = true
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["platform_de10"]
# Support for the DE10-Nano board.
platform_de10 = ["de10-nano"]
platform_desktop = []
