[package]
name = "mister-fpga"
version = "0.1.0"
edition = "2021"
description = "A Rust library to work with the MiSTer FPGA Cores API."
readme = "README.md"
authors = ["Hans Larsen <hans.larsen@gmail.com>"]
repository = "https://github.com/1fpga/firmware.git"
license = "MIT"
keywords = ["fpga", "mister-fpga", "emulation"]
categories = ["embedded", "hardware-support"]
homepage = "https://github.com/1fpga/firmware"
documentation = "https://docs.rs/mister-fpga"

[dependencies]
image.workspace = true
one-fpga.workspace = true
mister-fpga-ini.workspace = true
sdl3 = { workspace = true, optional = true }
strum.workspace = true

array_map = "0.4.0"
bitfield = "0.17.0"
bitvec = "1.0.1"
chrono = "0.4.31"
crc32fast = "1.3.2"
cyclone-v = { path = "../cyclone-v", version = "0.1" }
embedded-graphics = "0.8.1"
fixed-map = "0.9.3"
glam = "0.29.2"
hex = "0.4.3"
i2cdev = "0.6.0"
liboptic_edid = "0.1.0"
nom = "8.0.0"
num-traits = "0.2.15"
once_cell = "1.18.0"
regex = "1.10.2"
serde.workspace = true
simple_endian = "0.3.2"
static_assertions = "1.1"
tracing.workspace = true

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.4.0"
rstest = "0.18.2"

[features]
default = []
sdl = ["sdl3"]
