[package]
name = "video-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "video-test"
path = "src/main.rs"

[dependencies]
embedded-graphics.workspace = true
embedded-graphics-framebuf.workspace = true
linuxfb.workspace = true
memmap = "0.7.0"
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }
